2001-11-29  Elena Zannoni  <ezannoni@redhat.com>

	* Makefile.in (ppc-linux-nat.o): Add dependency on ppc-tdep.h.

	* ppc-tdep.h (PPC_GPLAST_REGNUM): Define.

	* ppc-linux-nat.c: Include ppc-tdep.h.
	(ppc_register_u_addr): Don't use the static array regmap[],
	dynamically define the mapping instead.
	(supply_gregset): Ditto.
	(fill_gregset): Ditto.
	(COPY_REG): Delete macro defintion.
	(regmap): Delete array.

2001-11-29  Jim Blandy  <jimb@redhat.com>

	Tighten up GDB's support for returning structs by value.
	* s390-tdep.c (s390_use_struct_convention): New function.
	(s390_gdbarch_init): Register it as the S/390's
 	USE_STRUCT_CONVENTION method.  Register
	generic_cannot_extract_struct_value_address as our
	EXTRACT_STRUCT_VALUE_ADDRESS method.
	* arch-utils.c (generic_cannot_extract_struct_value_address): New
 	function.
	* arch-utils.h: Add corresponding prototype.

	* values.c (value_being_returned): Make error message a proper
 	sentence.

2001-11-27 Keith Walker <keith.walker@arm.com>

	* dwarf2read.c (read_attribute_value): New function to handle
	DW_FORM_indirect
	(read_attribute): uses read_attribute_value

2001-11-29  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c (s390_frame_saved_pc_nofix): If the prologue didn't
	save the return address register, assume that the return address
	is still in there.

2001-11-27  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS: Clarify obvious fix a little (as suggested by Eli
	Zaretskii).

2001-11-25  Jim Blandy  <jimb@redhat.com>

	* mn10300-tdep.c (mn10300_analyze_prologue): Doc fixes.

2001-11-27  Jim Blandy  <jimb@redhat.com>

	* s390-tdep.c: Get frame chains and saved pc values properly from
 	dummy frames.
	(s390_frame_saved_pc_nofix): if `*fi' is a dummy frame, get the
 	saved PC from the dummy frame's registers.
	(s390_frame_chain): Same for the saved SP.
	(s390_gdbarch_init): Register `generic_save_dummy_frame_tos' as
 	the `SAVE_DUMMY_FRAME_TOS' method, so the dummy frame's `top' gets
 	set correctly.
